--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   font-family: "Bangers", system-ui;
   font-weight: 400;
   font-style: normal;
+  letter-spacing: 2px;
 }
 .title {
   width: 100%;
@@ -82,6 +83,22 @@ button {
   .details-heading {
     color: white;
   }
+}
+.anime-details-2 {
+  background-color: black;
+  padding: 20px;
+  cursor: pointer;
+}
+.episodes{
+  list-style: none;
+  border: 1px solid blueviolet;
+  padding: 20px;
+  color: white;
+  transition: all .3s ease-in-out;
+}
+.episodes:hover{
+  color: white;
+  background-color: blueviolet;
 }
 .details-heading {
   color: blueviolet;
